--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "@auth/mongodb-adapter": "^3.7.2",
+    "cloudinary": "^2.5.1",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.3",
+    "multiparty": "^4.2.3",
+    "next": "15.0.1",
+    "next-auth": "^5.0.0-beta.25",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.14.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "typescript": "^5"
   }
 }
